Fix password visibility toggle button posititon

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -35,7 +35,7 @@
     display: block;
     position: absolute;
     right: 0;
-    top: 230px;
+    bottom: 145px;
 
     width: 22px;
     height: 22px;
